force-app/main/default/objects/Contact/fields/Fonction__c.field-meta.xml
<CustomField>
    <fullName>Fonction__c</fullName>
    <label>Fonction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Directeur</fullName>
            </value>
            <value>
                <fullName>Responsable</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>