force-app/main/default/objects/Contact/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direction</fullName>
            </value>
            <value>
                <fullName>Achat</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Logistique</fullName>
            </value>
            <value>
                <fullName>Qualité</fullName>
            </value>
            <value>
                <fullName>Opération</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>