force-app/main/default/objects/Contact/fields/Ville__c.field-meta.xml
<CustomField>
    <fullName>Ville__c</fullName>
    <label>Ville</label>
    <length>30</length>
    <type>Text</type>
</CustomField>