force-app/main/default/objects/Contact/validationRules/Validate_Phone_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Phone_Format</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    /* Pays = Maroc */
    MailingCountry=&quot;Maroc&quot;,

    /* Numéro non vide */
    NOT(ISBLANK(Phone)),

    /* Numéro invalide si ne respecte aucun des trois formats valides */
    NOT(
        REGEX(
            Phone,
            &quot;^\\+212[567]\\d{8}$|^00212[567]\\d{8}$&quot;
        )
    )
)</errorConditionFormula>
    <errorMessage>Le numéro de téléphone doit commencer par 00212 .</errorMessage>
</ValidationRule>