force-app/main/default/objects/Contact/listViews/Mes_Contacts.listView-meta.xml
<ListView>
    <fullName>Mes_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.DEPARTMENT</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Mes Contacts</label>
</ListView>